--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.80"
 aes = "0.8.4"
+cbc = { version = "0.1.2", features = ["alloc"] }
+
 rsa = "0.9.6"
+sha2 = "0.10.8"
+rand_chacha = "0.3.1"
